variables.Variables.scala.error
Erreur de compilation :
Variables:8: error: '<-' expected but ')' found.
for(y<x){
       ^Variables:14: error: illegal start of simple expression
	}
        ^