variables.Variables.scala.code
val x:Int=0
while(!estSurBiscuit){
  avance()
  x++
}
prendreBiscuit()
val y:Int=0
for(y<x){
  recule()
  y++
}
poseBiscuit()